--- a/templates/style.css
+++ b/templates/style.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background-color: black;
+    z-index: -2;
+}
 
 /*nav section*/
 #navbar::before {
@@ -69,7 +73,7 @@ background: url("/static/images/bg1.jpg") no-repeat center center/cover;
 height:100%;
 width:100%;
 z-index:-1;
-opacity:0.8;
+/* opacity:0.9; */
 }
 #bodySection{
 display: flex;
@@ -83,11 +87,11 @@ min-height: 700px;
 
 #contacts{
 display: flex;
-justify-content: center;
+/* justify-content: center; */
 flex-direction: column;
 align-items: center;
 background-color:black;
-opacity:.8;
+/* opacity:.8; */
 width:60%;
 height: 500px;
 padding-bottom: 34px;
@@ -157,56 +161,12 @@ font-family:'Courier New', Courier, monospace;
     text-align: left;
 }
 
-/* home section */
-#body1Section::before{
-    content:"";
-    position:absolute;
-    /* background-color: aqua; */
-    background: url("/static/images/bg1.jpg") no-repeat center center/cover;
-    height:100%;
-    width:100%;
-    z-index:-1;
-    opacity:0.8;
-    }
-
-#body1Section{
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    position:relative;
-    min-height: 700px;
-}
-.homeBox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    text-align: center;
-    padding: 10px 10px;
-    /* border: 2px solid black; */
-    border-radius: 20px;
-    margin: 10px 20px;
-    width: 100%;
-    height: 100%;
-    background-color:transparent;
-    /* opacity:.8; */
-}
-
-.homeBox img {
-    height: 150px;
-    margin: 10px;
-}
-.homeBox img:hover {
-    cursor:pointer;
-}
-.homeBox ul li{
-    text-align: left;
-}
 
 
 /* footer section*/
 footer {
+    position: sticky;
+    bottom: 0;
     display: flex;
     position: relative;
     align-items: center;
@@ -296,4 +256,26 @@ footer {
     text-align: center;
     box-shadow: 3px 3px 3px black;
 
+}
+@media only screen and (max-width: 800px) {
+    #services {
+        flex-direction: column;
+    }
+    .services-box {
+        width: 80%;
+        height: 80%;
+    }
+    .h-primary {
+        font-size: 3.0rem;
+    }
+    .h-secondary {
+        font-size: 2rem;        
+    }
+    #contacts {
+        width: 90%;
+        height: 525px;
+    }
+    #contacts form{
+        width:80%;
+    }
 }
